# mldev

./: LICENSE  README.md  pyproject.toml
mldev/001_micrograd/: README.md  exercises.ipynb  tweet.md
mldev/002_makemore/: README.md  broadcasting.ipynb  tensor_tutorial.ipynb  trigram.ipynb
mldev/003_makemore_mlp/: README.md  mlp.ipynb
mldev/004_makemore_batchnorm/: visualizing_gradients.ipynb  visualizing_gradients.md
mldev/005_python_concurrency/: concurrency.ipynb  concurrency.md
